# csv-split-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  errors.rs  file.rs  io.rs  main.rs
