[package]
name = "csv-split"
version = "0.1.0"
authors = ["michael-grunder <michael.grunder@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.3"
csv = "1.1.1"
flate2 = "1.0.12"
snafu = "0.6.0"
bzip2 = "0.3.3"
futures = "0.3.1"
itertools = "0.8.2"
csv-core = "0.1.6"
tokio = { version = "0.2.6", features = ["full"]}
iou = "0.2.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "split"
harnass = false
